Fixed Tour Date Alignment

--- a/assets/stylesheets/tour-dates.css
+++ b/assets/stylesheets/tour-dates.css
@@ -55,6 +55,7 @@ td {
   background: #333;
   width: 100px;
   height: 80px;
+  padding-top: 15px;
 }
 
 .stacked-location {
